[gd_scene load_steps=10 format=3 uid="uid://cgkhyrnk8vip3"]

[ext_resource type="Script" uid="uid://dn72nuyun1o7o" path="res://Scripts/ufo.gd" id="1_3ue4y"]
[ext_resource type="Texture2D" uid="uid://bbq7h1ck1w8af" path="res://Assets/character_tilesheet_retro_transparent.png" id="1_xosc4"]
[ext_resource type="AudioStream" uid="uid://dqqnqix2dgttn" path="res://Assets/Sounds/SFX/spaceEngine_000.ogg" id="3_ppr3x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ue4y"]
size = Vector2(26, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppr3x"]
atlas = ExtResource("1_xosc4")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1ch6"]
atlas = ExtResource("1_xosc4")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0lff"]
atlas = ExtResource("1_xosc4")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4byl"]
atlas = ExtResource("1_xosc4")
region = Rect2(48, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qjalv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppr3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1ch6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0lff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4byl")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="UFO" type="Area2D" groups=["ufo"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_3ue4y")
min_score = 200
max_score = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3ue4y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.92629945, 2.5027991e-06, 1.540184e-06, 1)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_qjalv")
autoplay = "default"
frame_progress = 0.020501304

[node name="LeftSpawn" type="Marker2D" parent="."]
position = Vector2(-70, 80)

[node name="RightSpawn" type="Marker2D" parent="."]
position = Vector2(670, 90)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -2)
rect = Rect2(-1, -3, 2, 2)

[node name="SpawnChanceTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ppr3x")
volume_db = -10.0
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="SpawnChanceTimer" to="." method="_on_spawn_chance_timer_timeout"]
